--- a/frontend/src/loginpage/index.html
+++ b/frontend/src/loginpage/index.html
@@ -13,6 +13,7 @@
     </head>
 
     <body>
+        <h1>Farm Cup Dashboard</h1>
         <table>
             <tr>
               <td>Cocopeat Moisture</td>
