--- a/frontend/src/loginpage/index.html
+++ b/frontend/src/loginpage/index.html
@@ -13,20 +13,68 @@
     </head>
 
     <body>
-        <h1>Farm Cup Dashboard</h1>
-        <table>
-            <tr>
-              <td>Cocopeat Moisture</td>
-              <td>Total Dissolved Solids</td>
-              <td>pH Level of Water</td>
-              <td>Electrical Conductivity</td>
-            </tr>
-            <tr>
-              <td>Ambient Light</td>
-              <td>Ambient Temperature</td>
-              <td>Ambient Humidity</td>
-              <td>Water Level</td>
-            </tr>
-          </table>
+        <h1 class="home-header">Farm Cup Dashbaord</h1>
+
+        <div>
+          <div class="card-container">
+            <div class="card">
+              <div class="card-content">
+                <h2>Cocopeat Moisture</h2>
+                <p>This is the content of Card 1.</p>
+              </div>
+            </div>
+            <!-- Repeat this block for each card -->
+            <!-- Example for Card 2 -->
+            <div class="card">
+              <div class="card-content">
+                <h2>Total Dissolved Solids (TDS)</h2>
+                <p>This is the content of Card 2.</p>
+              </div>
+            </div>
+
+            <div class="card">
+                <div class="card-content">
+                  <h2>pH Level of Water</h2>
+                  <p>This is the content of Card 3.</p>
+                </div>
+              </div>
+
+              <div class="card">
+                <div class="card-content">
+                  <h2>Electrical Conductivity</h2>
+                  <p>This is the content of Card 4.</p>
+                </div>
+              </div>
+
+              <div class="card">
+                <div class="card-content">
+                  <h2>Ambient Light</h2>
+                  <p>This is the content of Card 5.</p>
+                </div>
+              </div>
+
+              <div class="card">
+                <div class="card-content">
+                  <h2>Ambient Temperature</h2>
+                  <p>This is the content of Card 6.</p>
+                </div>
+              </div>
+
+              <div class="card">
+                <div class="card-content">
+                  <h2>Ambient Humidity</h2>
+                  <p>This is the content of Card 7.</p>
+                </div>
+              </div>
+
+              <div class="card">
+                <div class="card-content">
+                  <h2>Water Level</h2>
+                  <p>This is the content of Card 8.</p>
+                </div>
+              </div>
+            <!-- End of repeated block -->
+          </div>
+        </div>
     </body>
 </html>
