--- a/frontend/src/loginpage/index.html
+++ b/frontend/src/loginpage/index.html
@@ -1,80 +1,33 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title> Farm Cup Control System </title>
+        <title> Farm Cup Login </title>
 
         <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/material-components-web/10.0.0/material-components-web.min.css">
 
         <link rel="stylesheet" href="./style.css">
+
     </head>
-
     <body>
-        <h1 class="home-header">Farm Cup Dashbaord</h1>
-
-        <div>
-          <div class="card-container">
-            <div class="card">
-              <div class="card-content">
-                <h2>Cocopeat Moisture</h2>
-                <p>This is the content of Card 1.</p>
-              </div>
+        <div class="login-container">
+            <h1 class="login-header"> Login </h1>
+            <div class="login-form">
+                <div class="md-text-field">
+                    <label for="username">Username</label>
+                    <input type="text" id="username">
+                </div>
+                <div class="md-text-field">
+                    <label for="password">Password</label>
+                    <input type="password" id="password">
+                </div>
+                <button class="md-button" onclick="login()">Login</button>
             </div>
-            <!-- Repeat this block for each card -->
-            <!-- Example for Card 2 -->
-            <div class="card">
-              <div class="card-content">
-                <h2>Total Dissolved Solids (TDS)</h2>
-                <p>This is the content of Card 2.</p>
-              </div>
-            </div>
-
-            <div class="card">
-                <div class="card-content">
-                  <h2>pH Level of Water</h2>
-                  <p>This is the content of Card 3.</p>
-                </div>
-              </div>
-
-              <div class="card">
-                <div class="card-content">
-                  <h2>Electrical Conductivity</h2>
-                  <p>This is the content of Card 4.</p>
-                </div>
-              </div>
-
-              <div class="card">
-                <div class="card-content">
-                  <h2>Ambient Light</h2>
-                  <p>This is the content of Card 5.</p>
-                </div>
-              </div>
-
-              <div class="card">
-                <div class="card-content">
-                  <h2>Ambient Temperature</h2>
-                  <p>This is the content of Card 6.</p>
-                </div>
-              </div>
-
-              <div class="card">
-                <div class="card-content">
-                  <h2>Ambient Humidity</h2>
-                  <p>This is the content of Card 7.</p>
-                </div>
-              </div>
-
-              <div class="card">
-                <div class="card-content">
-                  <h2>Water Level</h2>
-                  <p>This is the content of Card 8.</p>
-                </div>
-              </div>
-            <!-- End of repeated block -->
-          </div>
         </div>
+    
+        <script src="script.js"></script>
     </body>
 </html>
